<resources>
    <string name="app_name">Nui Bookstore</string>
    <string name="btn_login">Login</string>
    <string name="welcome">Welcome to Nui Bookstore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search here</string>
    <string name="label">Label</string>
    <string name="name">Name: </string>
    <string name="author">Author: </string>
    <string name="description">Description: </string>
    <string name="price">Price( $): </string>
    <string name="button">Add to cart</string>
    <string name="delete">Delete</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="user_email">phantrungson5011@gmail.com</string>
    <string name="novel">Novel</string>
    <string name="children">Children</string>
    <string name="history">History</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="total_price">Total price( $): </string>
    <string name="order_button">Order</string>
    <string name="confirm_order">Please write your Shipment details</string>
    <string name="your_name">Your name</string>
    <string name="your_phone">Your phone</string>
    <string name="home_address">Home address</string>
    <string name="city">City</string>
    <string name="confirm">Confirm</string>
    <string name="order_information_button">Order information</string>
    <string name="not_shipped">Order processing</string>
    <string name="shipping">Shipping</string>
    <string name="processing_tab">Processing</string>
    <string name="shipping_tab">Shipping</string>
    <string name="shipped_tab">Shipped</string>
    <string name="order_date">Order date: </string>
    <string name="customer_information">Customer information:</string>
    <string name="product_information">Product information:</string>
</resources>