<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.NuiBookstore"
        android:id="@+id/appbar">
        <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolbar_main_layout"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_order"
        android:textAlignment="center"
        android:layout_margin="15dp"
        android:textSize="18dp"
        android:layout_below="@+id/appbar"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/txt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_name"
        android:background="@drawable/rounded_edittext"/>
    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/name_edit_text"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/your_phone"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:id="@+id/home_address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_edit_text"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/home_address"
        android:background="@drawable/rounded_edittext"/>
    <EditText
        android:id="@+id/city_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_address_edit_text"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/city"
        android:background="@drawable/rounded_edittext"/>

    <Button
        android:id="@+id/confirm_order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm"
        android:layout_margin="20dp"
        android:background="@drawable/gradient_background"
        android:textAllCaps="false"/>





</RelativeLayout>