<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view_cart"
    android:layout_margin="4dp"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/book_image_cart"
            android:layout_width="127dp"
            android:layout_height="143dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/book_name_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/book_image_cart"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/book_author_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/book_image_cart"
            android:layout_below="@id/book_name_cart"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/book_price_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/book_image_cart"
            android:layout_below="@id/book_author_cart"
            android:layout_margin="5dp"/>
        <LinearLayout
            android:layout_below="@id/book_price_cart"
            android:layout_toRightOf="@id/book_image_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <Button
                android:id="@+id/button_decrease"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="@string/decrease"
                />
            <TextView
                android:id="@+id/quantity_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/button_increase"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="@string/increase"
                />
            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginStart="30dp"/>



        </LinearLayout>








    </RelativeLayout>
</androidx.cardview.widget.CardView>